leptos_macro/tests/view/09_generic_prop_wrong_type.stderr
error[E0277]: `bool` is not a valid type for prop `generic_fun` on component `Inner`
  --> tests/view/09_generic_prop_wrong_type.rs:10:48
   |
10 |             <Inner concrete_i32=42 generic_fun=true>
   |              ----------------------------------^^^^
   |              |                                 |
   |              |                                 the trait `Fn()` is not implemented for `bool`
   |              required by a bound introduced by this call
   |
   = note: required: `Fn() -> bool`
note: required for `bool` to implement `__Inner_PropBound_generic_fun`
  --> tests/view/09_generic_prop_wrong_type.rs:17:1
   |
17 | #[component]
   | ^^^^^^^^^^^^
18 | fn Inner<F>(
   |    ^^^^^
...
24 |     F: Fn() -> bool,
   |        ------------ unsatisfied trait bound introduced here
note: required by a bound in `Inner::__check_generic_fun`
  --> tests/view/09_generic_prop_wrong_type.rs:18:4
   |
17 | #[component]
   | ------------ required by a bound in this associated function
18 | fn Inner<F>(
   |    ^^^^^ required by this bound in `Inner::__check_generic_fun`
   = note: this error originates in the attribute macro `component` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: the method `__finalize` exists for struct `InnerProps<bool>`, but its trait bounds were not satisfied
  --> tests/view/09_generic_prop_wrong_type.rs:10:14
   |
10 |             <Inner concrete_i32=42 generic_fun=true>
   |              ^^^^^ method cannot be called on `InnerProps<bool>` due to unsatisfied trait bounds
...
17 | #[component]
   | ------------ method `__finalize` not found for this struct
   |
note: the following trait bounds were not satisfied:
      `bool: Fn<()>`
      `bool: FnOnce<()>`
  --> tests/view/09_generic_prop_wrong_type.rs:24:8
   |
17 | #[component]
   | ------------
...
24 |     F: Fn() -> bool,
   |        ^^^^^^^^^^^^
   |        |       |
   |        |       unsatisfied trait bound introduced here
   |        unsatisfied trait bound introduced here
